WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60413
[Soup] ResourceHandles are leaked on 304 responses
https://bugs.webkit.org/show_bug.cgi?id=60413
Summary
[Soup] ResourceHandles are leaked on 304 responses
Martin Robinson
Reported
2011-05-06 15:29:25 PDT
When handling 304 responses, the libsoup backend never cleans up ResourceHandles.
Attachments
Patch
(2.03 KB, patch)
2011-05-06 15:36 PDT
,
Martin Robinson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2011-05-06 15:36:20 PDT
Created
attachment 92652
[details]
Patch
Xan Lopez
Comment 2
2011-05-06 15:40:11 PDT
Comment on
attachment 92652
[details]
Patch Looks good to me!
Martin Robinson
Comment 3
2011-05-06 16:06:10 PDT
Comment on
attachment 92652
[details]
Patch Clearing flags on attachment: 92652 Committed
r85984
: <
http://trac.webkit.org/changeset/85984
>
Martin Robinson
Comment 4
2011-05-06 16:06:19 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug